--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section class="special box">
 								<i class="icon fa-clock-o major"></i>
 								<h3>Timings</h3>
-								<p>We function from 16:30 to 19:00 on weekdays, 15:00 to 16:00 on Saturdays. Sundays are holidays.</p>
+								<p>We function from 16:30 to 19:30 on weekdays, 15:00 to 18:00 on Saturdays and Sundays are holidays.</p>
 							</section>
 						</div>
 						<div class="6u">
