--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						</div>
 						</div>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy; Homeroom Eagles. All rights reserved.</li>
 
 					</ul>
 				</div>
