--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -59,7 +59,7 @@
 			<footer id="footer">
 
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy;Homeroom Eagles. All rights reserved.</li>
 
 					</ul>
 				</div>
