--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -52,7 +52,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy; Homeroom Eagles. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
