added email and photo check

--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -41,10 +41,14 @@
 				<header class="major">
 					<h2>Contact Us</h2>
 					<p>
+						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.
 						Email ID : <a href="homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
 						Phone Number : +91-9629687557<br>
-						Alternate Phone Number : +91-8778196631<br>
-						Name : Mrs. B. Sreevidhya Ramakrishnan
+						Alternate Phone Number : +91-8778196631<br><br>
+						Name : Mrs. S. Gomathi<br>
+						Phone Number : +91-<br>
+						Alternate Phone Number : +91-<br>
+
 					</p>
 				</header>
 
