--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -41,14 +41,15 @@
 				<header class="major">
 					<h2>Contact Us</h2>
 					<p>
-						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.
-						Email ID : <a href="homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
+						Name : Mr. G. Ramakrishnan, Chairman, Homeroom Eagles.<br>
+						Email ID :<a href="mailto:gramadlp@gmail.com"> gramadlp@gmail.com </a><br>
+						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.<br>
+						Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
 						Phone Number : +91-9629687557<br>
 						Alternate Phone Number : +91-8778196631<br><br>
 						Name : Mrs. S. Gomathi<br>
-						Phone Number : +91-<br>
-						Alternate Phone Number : +91-<br>
-
+						Phone Number : +91-8778300738<br>
+						Alternate Phone Number : +91-9176617348<br>
 					</p>
 				</header>
 
