--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -25,7 +25,7 @@
 	<body id="top">
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Homeroom Eagles</a></h1>
+				<h1><a href="index.html">Homeroom Eagles</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
