--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -46,8 +46,8 @@
 						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.<br>
 						Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
 						Phone Number : +91-9629687557<br>
-						Alternate Phone Number : +91-8778196631<br><br>
-						Name : Mrs. S. Gomathi<br>
+						Alternate Phone Number : +91-8778196631<br>
+						Name : Mrs. S. Gomathi, Admin In-Charge.<br>
 						Phone Number : +91-8778300738<br>
 						Alternate Phone Number : +91-9176617348<br>
 					</p>
