added 4 for inf scroll

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -52,6 +52,10 @@
 				<img src = "images/i1.jpg" alt=""/>
 				<img src = "images/i2.jpg" alt=""/>
 				<img src = "images/i10.jpg" alt=""/>
+				<img src = "images/i12.jpg" alt=""/>
+				<img src = "images/i7.jpg" alt=""/>
+				<img src = "images/i3.jpg" alt=""/>
+				<img src = "images/i5.jpg" alt=""/>
 
 			</div>
 </div>
