--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -39,23 +39,23 @@
 			<h2 class="align-center"> Our Gallery </h2>
 			<div id="container_inf">
 			<div class="photobanner">
-				<img class=first src = "images/i12.jpg" alt=""/>
-				<img src = "images/i7.jpg" alt=""/>
-				<img src = "images/i3.jpg" alt=""/>
-				<img src = "images/i5.jpg" alt=""/>
-				<img src = "images/i13.jpg" alt=""/>
-				<img src = "images/i11.jpg" alt=""/>
-				<img src = "images/i6.jpg" alt=""/>
-				<img src = "images/i8.jpg" alt=""/>
-				<img src = "images/i9.jpg" alt=""/>
-				<img src = "images/i4.jpg" alt=""/>
-				<img src = "images/i1.jpg" alt=""/>
-				<img src = "images/i2.jpg" alt=""/>
-				<img src = "images/i10.jpg" alt=""/>
-				<img src = "images/i12.jpg" alt=""/>
-				<img src = "images/i7.jpg" alt=""/>
-				<img src = "images/i3.jpg" alt=""/>
-				<img src = "images/i5.jpg" alt=""/>
+				<img class=first src = "images/ix12.jpg" alt=""/>
+				<img src = "images/ix7.jpg" alt=""/>
+				<img src = "images/ix3.jpg" alt=""/>
+				<img src = "images/ix5.jpg" alt=""/>
+				<img src = "images/ix13.jpg" alt=""/>
+				<img src = "images/ix11.jpg" alt=""/>
+				<img src = "images/ix6.jpg" alt=""/>
+				<img src = "images/ix8.jpg" alt=""/>
+				<img src = "images/ix9.jpg" alt=""/>
+				<img src = "images/ix4.jpg" alt=""/>
+				<img src = "images/ix1.jpg" alt=""/>
+				<img src = "images/ix2.jpg" alt=""/>
+				<img src = "images/ix10.jpg" alt=""/>
+				<img src = "images/ix12.jpg" alt=""/>
+				<img src = "images/ix7.jpg" alt=""/>
+				<img src = "images/ix3.jpg" alt=""/>
+				<img src = "images/ix5.jpg" alt=""/>
 
 			</div>
 </div>
