added logo again

--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -35,7 +35,7 @@
 					</ul>
 				</nav>
 			</header>
-<center><a class="image chill"><img src="images/homeroom logo_3.jp"></a></center>
+<center><a class="image chill"><img src="images/homeroom_logo_3.jpg"></a></center>
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
