--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Ion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Contact</title>
@@ -22,6 +17,7 @@
 		</noscript>
 	</head>
 	<body id="top">
+		<script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
@@ -53,7 +49,23 @@
 					</p>
 				</header>
 
-
+<h2> <center>Say Hello </center></h2>
+<form class="cf" id="form" class="topBefore" name="msg_to" autocomplete="on" action="mails.php" method="POST">
+  <div class="half left cf">
+    <input type="text" id="name" placeholder="Name">
+    <input type="email" id="email" placeholder="Email address">
+  </div>
+  <div class="half right cf">
+    <textarea name="message" type="text" id="message" placeholder="Message"></textarea>
+  </div>
+  <input type="submit" value="Submit" id="submit">
+</form>
+						<script language="JavaScript">
+						var frmvalidator  = new Validator("msg_to");
+						frmvalidator.addValidation("name","req","Please provide your name");
+						frmvalidator.addValidation("email","req","Please provide your email");
+						frmvalidator.addValidation("email","email","Please enter a valid email address");
+						</script>
 		<!-- Footer -->
 			<footer id="footer">
 					<ul class="copyright">
