--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -36,17 +36,18 @@
 			<section id="main" class="wrapper style1">
 				<header class="major">
 					<h2>Contact Us</h2>
-					<p>
+						<p>
 						Name : Mr. G. Ramakrishnan, Chairman, Homeroom Eagles.<br>
-						Email ID :<a href="mailto:gramadlp@gmail.com"> gramadlp@gmail.com </a><br>
+						Email ID :<a href="mailto:gramadlp@gmail.com"> gramadlp@gmail.com </a><br><br>
 						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.<br>
 						Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
 						Phone Number : +91-9629687557<br>
-						Alternate Phone Number : +91-8778196631<br>
+						Alternate Phone Number : +91-8778196631<br><br>
 						Name : Mrs. S. Gomathi, Admin In-Charge.<br>
 						Phone Number : +91-8778300738<br>
-						Alternate Phone Number : +91-9176617348<br>
+						Alternate Phone Number : +91-9176617348<br><br>
 					</p>
+
 				</header>
 
 <h2> <center>Say Hello </center></h2>
