--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -54,8 +54,8 @@
 
 <form class="cf" id="form" class="topBefore" name="msg_to" autocomplete="on" action="mails.php" method="POST">
   <div class="half left cf">
-    <input type="text" id="name" placeholder="Name">
-    <input type="email" id="email" placeholder="Email address">
+    <input type="text" id="name" placeholder="Name" name="name">
+    <input type="email" id="email" placeholder="Email address" name="email">
   </div>
   <div class="half right cf">
     <textarea name="message" type="text" id="message" placeholder="Message"></textarea>
