images were added

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -5,68 +5,108 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Pictures</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
 
-		</noscript>
-	</head>
-	<body id="top">
-		<!-- Header -->
-			<header id="header" class="skel-layers-fixed">
-				<h1><a href="index.html">Homeroom Eagles</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="left-sidebar.html">Pictures</a></li>
-						<li><a href="right-sidebar.html">Contact</a></li>
-						<li><a href="https://www.google.co.in/maps/place/38A,+12th+Ave,+R.V.+Nagar,+Mettuppalayam,+Ashok+Nagar,+Chennai,+Tamil+Nadu+600083/@13.0307613,80.2096389,197m/data=!3m2!1e3!4b1!4m12!1m6!3m5!1s0x3a526721ece14b25:0x5bcb94ab2e680caa!2sKasi+Theatre!8m2!3d13.029451!4d80.2084435!3m4!1s0x3a52671f7ce195e3:0xd982405d5c370647!8m2!3d13.0307613!4d80.2101874?hl=en">Location</a></li>
-					</ul>
-				</nav>
-			</header>
-			<br>
-			<h2 class="align-center"> Our Gallery </h2>
-			<div id="container_inf">
-			<div class="photobanner">
-				<img class=first src = "images/ix12.jpg" alt=""/>
-				<img src = "images/ix7.jpg" alt=""/>
-				<img src = "images/ix3.jpg" alt=""/>
-				<img src = "images/ix5.jpg" alt=""/>
-				<img src = "images/ix13.jpg" alt=""/>
-				<img src = "images/ix11.jpg" alt=""/>
-				<img src = "images/ix6.jpg" alt=""/>
-				<img src = "images/ix8.jpg" alt=""/>
-				<img src = "images/ix9.jpg" alt=""/>
-				<img src = "images/ix4.jpg" alt=""/>
-				<img src = "images/ix1.jpg" alt=""/>
-				<img src = "images/ix2.jpg" alt=""/>
-				<img src = "images/ix12.jpg" alt=""/>
-				<img src = "images/ix7.jpg" alt=""/>
-				<img src = "images/ix3.jpg" alt=""/>
-				<img src = "images/ix5.jpg" alt=""/>
+<head>
+	<title>Pictures</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/skel-layers.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-xlarge.css" />
 
-			</div>
-</div>
-		<!-- Footer -->
-			<footer id="footer">
+	</noscript>
+</head>
 
-					<ul class="copyright">
-						<li>&copy;Homeroom Eagles. All rights reserved.</li>
+<body id="top">
+	<!-- Header -->
+	<header id="header" class="skel-layers-fixed">
+		<h1><a href="index.html">Homeroom Eagles</a></h1>
+		<nav id="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="left-sidebar.html">Pictures</a></li>
+				<li><a href="right-sidebar.html">Contact</a></li>
+				<li><a href="https://www.google.co.in/maps/place/38A,+12th+Ave,+R.V.+Nagar,+Mettuppalayam,+Ashok+Nagar,+Chennai,+Tamil+Nadu+600083/@13.0307613,80.2096389,197m/data=!3m2!1e3!4b1!4m12!1m6!3m5!1s0x3a526721ece14b25:0x5bcb94ab2e680caa!2sKasi+Theatre!8m2!3d13.029451!4d80.2084435!3m4!1s0x3a52671f7ce195e3:0xd982405d5c370647!8m2!3d13.0307613!4d80.2101874?hl=en">Location</a></li>
+			</ul>
+		</nav>
+	</header>
+	<br>
+	<h2 class="align-center"> Our Gallery </h2>
+	<div id="container_inf">
+		<div class="photobanner">
+			<img class=first src="images/Entertainment 5.JPG" alt="" />
+			<img src="images/National Anthem.JPG" alt="" />
+			<img src="images/Chief Guest speaks 2.JPG" alt="" />
+			<img src="images/Entertainment 4.JPG" alt="" />
+			<img src="images/Luunch 2.JPG" alt="" />
+			<img src="images/Chief Guest Speaks 1.JPG" alt="" />
+			<img src="images/Entertainment 6 .JPG" alt="" />
+			<img src="images/serving of Lunch 2.JPG" alt="" />
+			<img src="images/Eaglet honourned.JPG" alt="" />
+			<img src="images/Entertainment 7 .JPG" alt="" />
+			<img src="images/Entertainment 3.JPG" alt="" />
+			<img src="images/Section of audience.JPG" alt="" />
+			<img src="images/Entertainment 2.JPG" alt="" />
+			<img src="images/HR Logo.JPG" alt="" />
+			<img src="images/Entertainment 1.JPG" alt="" />
+			<img src="images/Chief Guest introduced.JPG" alt="" />
+			<img src="images/Eagles Awards .JPG" alt="" />
+			<img src="images/Eaglet Honoured 1.JPG" alt="" />
+			<img src="images/Renering Vote of Thanks .JPG" alt="" />
+			<img src="images/Eaglets Honoured .JPG" alt="" />
+			<img src="images/Chief Guest Arrives.JPG" alt="" />
+			<img src="images/Eaglet Honoured 3.JPG" alt="" />
+			<img src="images/Eaglet Honoured 2.JPG" alt="" />
+			<img src="images/Pillars of HR 1.JPG" alt="" />
+			<img src="images/Flanking HR well wisher.JPG" alt="" />
+		</div>
+	</div>
+	<h2 class="align-center"> Gallery - 2 </h2>
+	<div id="container_inf">
+		<div class="photobanner">
+			<img class=first src="images/Entertainment 5.JPG" alt="" />
+			<img src="images/Chief Guest Arrives .JPG" alt="" />
+			<img src="images/HR family.JPG" alt="" />
+			<img src="images/Entertainment 1 .JPG" alt="" />
+			<img src="images/serving of Lunch 1 .JPG" alt="" />
+			<img src="images/Entertainment 2 .JPG" alt="" />
+			<img src="images/AD3 venue.JPG" alt="" />
+			<img src="images/Vote of thanks.JPG" alt="" />
+			<img src="images/Chief guest introuced.JPG" alt="" />
+			<img src="images/Before the beginning.JPG" alt="" />
+			<img src="images/Eagles Medals .JPG" alt="" />
+			<img src="images/HR introduced.JPG" alt="" />
+			<img src="images/Entertainment 3 .JPG" alt="" />
+			<img src="images/Well wiisher abt HR.JPG" alt="" />
+			<img src="images/Compeering.JPG" alt="" />
+			<img src="images/Entertainment 4 .JPG" alt="" />
+			<img src="images/Lunch.JPG" alt="" />
+			<img src="images/Chief guest. address .JPG" alt="" />
+			<img src="images/Chief Guest receiving memento.JPG" alt="" />
+			<img src="images/Eagles Rewards.JPG" alt="" />
+			<img src="images/Entertanment 8 .JPG" alt="" />
+			<img src="images/Entertainment 5 .JPG" alt="" />
+			<img src="images/Chief guest speaks.JPG" alt="" />
+			<img src="images/Compere at work .JPG" alt="" />
+			<img src="images/Feedback of a swell wisher.JPG" alt="" />
+		</div>
+	</div>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy;Homeroom Eagles. All rights reserved.</li>
 
-					</ul>
-				</div>
-			</footer>
+		</ul>
+		</div>
+	</footer>
 
-	</body>
+</body>
+
 </html>
