--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -37,7 +37,7 @@
 				<header class="major">
 					<h2>Contact Us</h2>
 						<p>
-						Name : Mr. G. Ramakrishnan, Chairman, Homeroom Eagles.<br>
+						Name : Dr. G. Ramakrishnan, Chairman, Homeroom Eagles.<br>
 						Email ID :<a href="mailto:gramadlp@gmail.com"> gramadlp@gmail.com </a><br><br>
 						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.<br>
 						Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
