added google analytics

--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -1,55 +1,67 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Contact</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
-	</head>
-	<body id="top">
-		<script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
 
-		<!-- Header -->
-			<header id="header" class="skel-layers-fixed">
-				<h1><a href="index.html">Homeroom Eagles</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="left-sidebar.html">Pictures</a></li>
-						<li><a href="right-sidebar.html">Contact</a></li>
-						<li><a href="https://www.google.co.in/maps/place/38A,+12th+Ave,+R.V.+Nagar,+Mettuppalayam,+Ashok+Nagar,+Chennai,+Tamil+Nadu+600083/@13.0307613,80.2096389,197m/data=!3m2!1e3!4b1!4m12!1m6!3m5!1s0x3a526721ece14b25:0x5bcb94ab2e680caa!2sKasi+Theatre!8m2!3d13.029451!4d80.2084435!3m4!1s0x3a52671f7ce195e3:0xd982405d5c370647!8m2!3d13.0307613!4d80.2101874?hl=en">Location</a></li>
-					</ul>
-				</nav>
-			</header>
-<center><a class="image chill"><img src="images/homeroom_logo_3.jpg"></a></center>
-		<!-- Main -->
-			<section id="main" class="wrapper style1">
-				<header class="major">
-					<h2>Contact Us</h2>
-						<p>
-						Name : Dr. G. Ramakrishnan, Chairman, Homeroom Eagles.<br>
-						Email ID :<a href="mailto:gramadlp@gmail.com"> gramadlp@gmail.com </a><br><br>
-						Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.<br>
-						Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
-						Phone Number : +91-9629687557<br>
-						Alternate Phone Number : +91-8778196631<br><br>
-						Name : Mrs. S. Gomathi, Admin In-Charge.<br>
-						Phone Number : +91-8778300738<br>
-						Alternate Phone Number : +91-9176617348<br><br>
-					</p>
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137789304-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-				</header>
-<!--
+		gtag('config', 'UA-137789304-1');
+	</script>
+
+	<title>Contact</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/skel-layers.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-xlarge.css" />
+	</noscript>
+</head>
+
+<body id="top">
+	<script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
+
+	<!-- Header -->
+	<header id="header" class="skel-layers-fixed">
+		<h1><a href="index.html">Homeroom Eagles</a></h1>
+		<nav id="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="left-sidebar.html">Pictures</a></li>
+				<li><a href="right-sidebar.html">Contact</a></li>
+				<li><a href="https://www.google.co.in/maps/place/38A,+12th+Ave,+R.V.+Nagar,+Mettuppalayam,+Ashok+Nagar,+Chennai,+Tamil+Nadu+600083/@13.0307613,80.2096389,197m/data=!3m2!1e3!4b1!4m12!1m6!3m5!1s0x3a526721ece14b25:0x5bcb94ab2e680caa!2sKasi+Theatre!8m2!3d13.029451!4d80.2084435!3m4!1s0x3a52671f7ce195e3:0xd982405d5c370647!8m2!3d13.0307613!4d80.2101874?hl=en">Location</a></li>
+			</ul>
+		</nav>
+	</header>
+	<center><a class="image chill"><img src="images/homeroom_logo_3.jpg"></a></center>
+	<!-- Main -->
+	<section id="main" class="wrapper style1">
+		<header class="major">
+			<h2>Contact Us</h2>
+			<p>
+				Name : Dr. G. Ramakrishnan, Chairman, Homeroom Eagles.<br>
+				Email ID :<a href="mailto:gramadlp@gmail.com"> gramadlp@gmail.com </a><br><br>
+				Name : Mrs. B. Sreevidhya Ramakrishnan, Principal, Homeroom Eagles.<br>
+				Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
+				Phone Number : +91-9629687557<br>
+				Alternate Phone Number : +91-8778196631<br><br>
+				Name : Mrs. S. Gomathi, Admin In-Charge.<br>
+				Phone Number : +91-8778300738<br>
+				Alternate Phone Number : +91-9176617348<br><br>
+			</p>
+
+		</header>
+		<!--
 <h2> <center>Say Hello </center></h2>
 <form class="cf" id="form" class="topBefore" name="msg_to" autocomplete="on" action="mails.php" method="POST">
   <div class="half left cf">
@@ -68,12 +80,13 @@
 						frmvalidator.addValidation("email","email","Please enter a valid email address");
 						</script>
 		<!-- Footer -->
-			<footer id="footer">
-					<ul class="copyright">
-						<li>&copy; Homeroom Eagles. All rights reserved.</li>
-					</ul>
-				</div>
-			</footer>
+		<footer id="footer">
+			<ul class="copyright">
+				<li>&copy; Homeroom Eagles. All rights reserved.</li>
+			</ul>
+			</div>
+		</footer>
 
-	</body>
+</body>
+
 </html>
