--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -55,6 +55,9 @@
 				Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
 				Phone Number : +91-9629687557<br>
 				Alternate Phone Number : +91-8778196631<br><br>
+				Name : Mrs. Latha Raman, Vice Principal, Homeroom Eagles.<br>
+				Email ID : <a href="mailto:homeroom.eagles@gmail.com">homeroom.eagles@gmail.com</a><br>
+				Phone Number : +91-9840297566<br>				
 				Name : Mrs. S. Gomathi, Admin In-Charge.<br>
 				Phone Number : +91-8778300738<br>
 				Alternate Phone Number : +91-9176617348<br><br>
