Pics were segregated based on events

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -48,66 +48,87 @@
 		</nav>
 	</header>
 	<br>
-	<h2 class="align-center"> Our Gallery </h2>
+	<h2 class="align-center"> Homeroom and Activities conducted</h2>
 	<div id="container_inf">
 		<div class="photobanner">
-			<img class=first src="images/Entertainment 5.JPG" alt="" />
-			<img src="images/National Anthem.JPG" alt="" />
-			<img src="images/Chief Guest speaks 2.JPG" alt="" />
-			<img src="images/Entertainment 4.JPG" alt="" />
-			<img src="images/Luunch 2.JPG" alt="" />
-			<img src="images/Chief Guest Speaks 1.JPG" alt="" />
-			<img src="images/Entertainment 6 .JPG" alt="" />
-			<img src="images/serving of Lunch 2.JPG" alt="" />
-			<img src="images/Eaglet honourned.JPG" alt="" />
-			<img src="images/Entertainment 7 .JPG" alt="" />
-			<img src="images/Entertainment 3.JPG" alt="" />
-			<img src="images/Section of audience.JPG" alt="" />
-			<img src="images/Entertainment 2.JPG" alt="" />
-			<img src="images/HR Logo.JPG" alt="" />
-			<img src="images/Entertainment 1.JPG" alt="" />
-			<img src="images/Chief Guest introduced.JPG" alt="" />
-			<img src="images/Eagles Awards .JPG" alt="" />
-			<img src="images/Eaglet Honoured 1.JPG" alt="" />
-			<img src="images/Renering Vote of Thanks .JPG" alt="" />
-			<img src="images/Eaglets Honoured .JPG" alt="" />
-			<img src="images/Chief Guest Arrives.JPG" alt="" />
-			<img src="images/Eaglet Honoured 3.JPG" alt="" />
-			<img src="images/Eaglet Honoured 2.JPG" alt="" />
-			<img src="images/Pillars of HR 1.JPG" alt="" />
-			<img src="images/Flanking HR well wisher.JPG" alt="" />
+				<img class=first src="images/Before the beginning.JPG" alt="" />			
+				<img src="images/homeroom_logo_3.jpg" alt="" />
+				<img src="images/ix1.jpg" alt="" />
+				<img src="images/ix2.jpg" alt="" />
+				<img src="images/ix4.jpg" alt="" />
+				<img src="images/ix6.jpg" alt="" />
+				<img src="images/ix7.jpg" alt="" />
+				<img src="images/ix9.jpg" alt="" />
+				<img src="images/ix13.jpg" alt="" />
+				
 		</div>
 	</div>
-	<h2 class="align-center"> Gallery - 2 </h2>
+	<h2 class="align-center"> Annual day celebrations - 2017 </h2>
 	<div id="container_inf">
 		<div class="photobanner">
-			<img class=first src="images/Entertainment 5.JPG" alt="" />
-			<img src="images/Chief Guest Arrives .JPG" alt="" />
-			<img src="images/HR family.JPG" alt="" />
-			<img src="images/Entertainment 1 .JPG" alt="" />
-			<img src="images/serving of Lunch 1 .JPG" alt="" />
-			<img src="images/Entertainment 2 .JPG" alt="" />
-			<img src="images/AD3 venue.JPG" alt="" />
-			<img src="images/Vote of thanks.JPG" alt="" />
-			<img src="images/Chief guest introuced.JPG" alt="" />
-			<img src="images/Before the beginning.JPG" alt="" />
+			<img class=first src="images/ChiefGuestArrives1 .JPG" alt="" />
+			<img src="images/Chief Guest introuced.JPG" alt="" />
+			<img src="images/Chief guest speaks.JPG" alt="" />
 			<img src="images/Eagles Medals .JPG" alt="" />
-			<img src="images/HR introduced.JPG" alt="" />
-			<img src="images/Entertainment 3 .JPG" alt="" />
+			<img src="images/Compere at work .JPG" alt="" />
+			<img src="images/Eaglet honourned.JPG" alt="" />
 			<img src="images/Well wiisher abt HR.JPG" alt="" />
 			<img src="images/Compeering.JPG" alt="" />
-			<img src="images/Entertainment 4 .JPG" alt="" />
-			<img src="images/Lunch.JPG" alt="" />
-			<img src="images/Chief guest. address .JPG" alt="" />
-			<img src="images/Chief Guest receiving memento.JPG" alt="" />
+			<img src="images/HR introduced.JPG" alt="" />
+			<img src="images/Pillars of HR 1.JPG" alt="" />	
+			<img src="images/Section of audience.JPG" alt="" />		
+			<img src="images/ix3.jpg" alt="" />	
+			<img src="images/ix5.jpg" alt="" />		
+			<img src="images/ix11.jpg" alt="" />
+			<img src="images/ix12.jpg" alt="" />												
+			<img src="images/Entertainment3_2.JPG" alt="" />
 			<img src="images/Eagles Rewards.JPG" alt="" />
-			<img src="images/Entertanment 8 .JPG" alt="" />
-			<img src="images/Entertainment 5 .JPG" alt="" />
-			<img src="images/Chief guest speaks.JPG" alt="" />
-			<img src="images/Compere at work .JPG" alt="" />
-			<img src="images/Feedback of a swell wisher.JPG" alt="" />
+			<img src="images/Well wiisher abt HR.JPG" alt="" />
 		</div>
 	</div>
+	<h2 class="align-center"> Annual Day celebrations - 2018 </h2>
+	<div id="container_inf">
+		<div class="photobanner">
+			<img class=first src="images/ChiefGuestArrives2.JPG" alt="" />
+			<img src="images/Chief guest introuced.JPG" alt="" />
+			<img src="images/Chief guest address .JPG" alt="" />
+			<img src="images/Compeering.JPG" alt="" />
+			<img src="images/Eagles Medals .JPG" alt="" />
+			<img src="images/Eaglets Honoured .JPG" alt="" />
+			<img src="images/Entertainment4_2 .JPG" alt="" />
+			<img src="images/Entertainment5_2.JPG" alt="" />
+			<img src="images/Vote of thanks.JPG" alt="" />
+			<img src="images/Flanking HR well wisher.JPG" alt="" />
+			<img src="images/Vote of thanks.JPG" alt="" />
+			<img src="images/HR family.JPG" alt="" />
+			<img src="images/serving of Lunch 1 .JPG" alt="" />
+		</div>
+	</div>
+	<h2 class="align-center"> Annual Day celebrations - 2019 </h2>
+	<div id="container_inf">
+		<div class="photobanner">
+			<img class=first src="images/AD3 venue.JPG" alt="" />
+			<img src="images/Chief Guest receiving memento.JPG.JPG" alt="" />
+			<img src="images/Chief Guest Speaks 1.JPG.JPG" alt="" />
+			<img src="images/Chief Guest speaks 2.JPG" alt="" />
+			<img src="images/Eaglet Honoured 1.JPG" alt="" />
+			<img src="images/Eaglet Honoured 2.JPG" alt="" />
+			<img src="images/Eaglet Honoured 3.JPG" alt="" />
+			<img src="images/Eaglets Honoured .JPG" alt="" />
+			<img src="images/Entertainment 6 .JPG" alt="" />
+			<img src="images/Entertainment 8 .JPG" alt="" />
+			<img src="images/Entertainment 7 .JPG" alt="" />
+			<img src="images/Entertainment1_1.JPG" alt="" />
+			<img src="images/Entertainment3_1.JPG" alt="" />
+			<img src="images/Entertainment5_1.JPG" alt="" />
+			<img src="images/Renering Vote of Thanks .JPG" alt="" />
+			<img src="images/Feedback of a swell wisher.JPG" alt="" />
+			<img src="images/National Anthem.JPG" alt="" />
+			<img src="images/serving of Lunch 2.JPG" alt="" />
+			
+		</div >
+	</div>	
+
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="copyright">
