homeroom logo updated

--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -52,7 +52,7 @@
 	<div id="container_inf">
 		<div class="photobanner">
 				<img class=first src="images/Before the beginning.JPG" alt="" />			
-				<img src="images/homeroom_logo_3.jpg" alt="" />
+				<img src="images/HR Logo.JPG" alt="" />
 				<img src="images/ix1.jpg" alt="" />
 				<img src="images/ix2.jpg" alt="" />
 				<img src="images/ix4.jpg" alt="" />
